# pyonoy

./: README.md  pyproject.toml
.claude/: settings.local.json
examples/: abs_600.byop  absorbance_600.byoa  absorbance_600.byop  assay.byoa  assay_script.py  meta.json  workspace.json
examples/results/: _lock_id.txt  abs_reading.csv  byonoy.json  run_log.txt
pyonoy/: __init__.py  cli.py  client.py  launcher.py
tests/: test_client.py
